# kmlcli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo.tape  justfile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
docs/superpowers/plans/: 2026-05-10-kmlcli.md  2026-05-11-mvt-tiles.md  2026-05-25-review-fixes-v0.2.0.md
docs/superpowers/specs/: 2026-05-10-kmlcli-design.md
src/: cli.rs  clip.rs  lib.rs  main.rs  model.rs  parser.rs  projection.rs
src/commands/: info.rs  list.rs  mod.rs  tree.rs
src/tiles/: decode.rs  fetch.rs  math.rs  mod.rs  proto.rs  render.rs
src/tui/: app.rs  details.rs  input.rs  map.rs  mod.rs  tree.rs
tests/: cli_test.rs  clip_test.rs  decode_test.rs  model_test.rs  parser_test.rs  projection_test.rs  render_test.rs  smoke.tape  tile_math_test.rs
tests/fixtures/: empty.kml  multi.kml  simple.kml  style_map.kml
