[package]
name = "kmlcli"
version = "0.1.1"
edition = "2024"
description = "KML/KMZ viewer in the terminal with braille map rendering"
license = "MIT OR Apache-2.0"
repository = "https://github.com/corploc/kmlcli"
keywords = ["kml", "kmz", "terminal", "tui", "map"]
categories = ["command-line-utilities", "visualization"]

[lib]
name = "kmlcli"
path = "src/lib.rs"

[[bin]]
name = "kmlcli"
path = "src/main.rs"

[dependencies]
kml = { version = "0.13", features = ["zip"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1"
lru = "0.12"
ctrlc = "3"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
